--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -64,7 +64,7 @@ jobs:
           script: |
             sudo docker pull georgeous/foodgram_backend:latest
             sudo docker pull georgeous/foodgram_frontend:latest
-            cd infra
+            cd foodgram-project-react/infra
             sudo docker-compose stop
             sudo docker-compose rm backend
       - name: docker-compose up
