--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -64,9 +64,8 @@ jobs:
           script: |
             sudo docker pull georgeous/foodgram_backend:latest
             sudo docker pull georgeous/foodgram_frontend:latest
-            cd foodgram-project-react/infra
-            sudo docker-compose stop
-            sudo docker-compose rm backend
+            sudo docker stop
+            sudo docker rm backend
       - name: docker-compose up
         uses: appleboy/ssh-action@master
         with:
@@ -75,7 +74,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd infra/
+            cd foodgram-project-react/infra
             sudo touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo POSTGRES_DB=${{ secrets.DB_NAME }} >> .env
