--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -54,7 +54,7 @@ jobs:
       needs: build_and_push_to_docker_hub
       steps:
       - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
+        uses: actions/checkout@v2
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
@@ -66,7 +66,7 @@ jobs:
             cd foodgram-project-react/infra
             sudo docker-compose stop
             sudo docker-compose rm web
-            
+
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo POSTGRES_DB=${{ secrets.DB_NAME }} >> .env
