--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,7 @@
 server {
     listen 80;
-    server_name 127.0.0.1, localhost, 158.160.43.66;
+    server_name 158.160.43.66;
     server_tokens off;
-    client_max_body_size 20M;
 
     location /media/ {
         root /var/html;
