--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -50,6 +50,7 @@ jobs:
               tags: georgeous/foodgram_frontend:latest
 
   deploy:
+      if: ${{ github.ref }} == 'master'
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
       steps:
