--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -65,7 +65,7 @@ jobs:
             sudo docker pull georgeous/foodgram_backend:latest
             sudo docker pull georgeous/foodgram_frontend:latest
             sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker-compose rm backend
       - name: docker-compose up
         uses: appleboy/ssh-action@master
         with:
@@ -82,8 +82,8 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d --build
-            sudo docker-compose exec web python manage.py migrate
-            sudo docker-compose exec web python manage.py collectstatic --no-input 
+            sudo docker-compose exec backend python manage.py migrate
+            sudo docker-compose exec backend python manage.py collectstatic --no-input 
 
 
   send_message:
