--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     env_file:
       - ./.env
 
-  web:
+  backend:
     image: georgeous/foodgram_backend:latest
     restart: always
     volumes:
@@ -26,7 +26,7 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
-      - web
+      - backend
 
   nginx:
     image: nginx:1.19.3
